[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites/meat_thrown.png" type="Texture" id=1]
[ext_resource path="res://characters/Fireball.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/dragon/teen/teen_fireball_impact.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=6]
radius = 14.0357

[sub_resource type="AudioStreamRandomPitch" id=7]
audio_stream = ExtResource( 3 )

[node name="Fireball" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 2
speed_scale = 2.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )

[node name="FreeTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true
autostart = true

[node name="ImpactSFX" type="AudioStreamPlayer2D" parent="."]
stream = SubResource( 7 )
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="timeout" from="FreeTimer" to="." method="_on_FreeTimer_timeout"]
[connection signal="finished" from="ImpactSFX" to="." method="_on_ImpactSFX_finished"]
